# quantum_reservoir_computing

./: .gitignore  GITHUB_SETUP.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  run.ipynb  run_dynamical.py  run_experiments.py
experiments/: __init__.py  config.py  core.py  runner.py
quantum/: __init__.py  dynamical_encodings.py  encodings.py  entanglement_measures.py  features.py  quantum_system.py  test_system.ipynb
readout/: linear.py
reservoirs/: __init__.py  base.py  esn.py  esn_dynamical.py  quantum_dynamical.py  quantum_reservoir.py
scripts/: __init__.py  inspect_qrc_features.py  plot_dynamical_evolution.py  run_circle.ipynb  run_spiral.ipynb  run_u.ipynb  sweep_dt_and_plot.sh  test_installation.py
tasks/: __init__.py  base.py  circles.py  gaussians.py  memory_capacity.py  sinesquare.py  spirals.py  test_tasks.ipynb  two_triangles.py  two_u.py
